fixed nav margin bug where image did not align with navbar, put hover effect styling over navbar heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,6 @@
     background-color: #525252;
 }
 
-
 /* ------------------------ HEADER ---------------------------- */
 
 header {
@@ -29,7 +28,6 @@ header {
 
 .heading {
     margin-left: 50px;
-
 }
 
 .logo {
@@ -74,6 +72,10 @@ header {
     padding: 0;
 }
 
+#nav {
+    margin: 0;
+}
+
 .menuitem {
     height: 120px;
     text-align: center;
@@ -103,4 +105,12 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+/* ------------------------ HOVER.CSS ---------------------------- */
+
+.hvr-sweep-to-bottom:before {
+    background-color: rgba(0,0,0,0.2);
+    height: 120px;
+
 }
